# gtk4

debian/: .gitignore  README.Debian  README.source  changelog  clean  close-enough.keyfile  control  control.in  copyright  dh_gtkmodules.in  docs  docs.in  gbp.conf  gtk-3-examples.install.in  gtk-4-examples.install  gtk-4-tests.lintian-overrides  gtk-faq.devhelp  gtk-tutorial.devhelp  gtk-update-icon-cache.install  gtk2-engines-pixbuf.files  gtk2-engines-pixbuf.install.in  gtk2-engines-pixbuf.links.in  gtk2.0-examples.examples  gtk2.0-examples.examples.in  (+146 more)
subprojects/gi-docgen/: .editorconfig  .flake8  .gitlab-ci.yml  .green  CONTRIBUTING.md  MANIFEST.in  README.md  gi-docgen.doap  gi-docgen.pc.in  gi-docgen.py  meson.build  meson_options.txt  setup.cfg  setup.py
subprojects/gi-docgen/.reuse/: dep5
subprojects/gi-docgen/docs/: .gitignore  CODEOWNERS  Makefile  RELEASING.md  attributes.rst  conf.py  extra.css  gi-docgen.1  index.rst  linking.rst  project-configuration.rst  templates.rst  tutorial.rst
subprojects/gi-docgen/docs/tools/: check.rst  gen-index.rst  generate.rst  index.rst
subprojects/gi-docgen/examples/: gdk-pixbuf.toml  gdk.toml  gsk.toml  gtk3.toml  gtk4.toml  urlmap.js
subprojects/gi-docgen/gidocgen/: __init__.py  config.py  core.py  gdcheck.py  gdgendeps.py  gdgenerate.py  gdgenindices.py  gdindex.py  gdsearch.py  gidocmain.py  log.py  mdext.py  porter.py  utils.py
subprojects/gi-docgen/gidocgen/gir/: __init__.py  ast.py  parser.py
subprojects/gi-docgen/gidocgen/templates/basic/: base.html  basic.toml  class.html  class_method.html  constant.html  content.html  ctor.html  enum.html  function.html  interface.html  method.html  namespace.html  property.html  signal.html  struct.html  style.css  type_func.html  vfunc.html
(+9212 files in other folders)
